<resources>
    <string name="app_name">FreeBite</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="s_authentifier">s\'authentifier</string>
    <string name="si_tu_as_d_j_un_compte_veuillez_s_authentifier">Si tu as déjà un compte veuillez s\'authentifier !</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="e_mail">E-mail</string>
    <string name="se_connecter">Se connecter</string>
    <string name="bienvenue">Bienvenue!</string>
    <string name="veuillez_entrez_vos_informations">Veuillez entrez vos informations !</string>
    <string name="souvient_de_moi">Souvient de moi</string>
    <string name="j_ai_oubli_mon_mot_de_passe">J\'ai oublié mon mot de passe</string>
    <string name="login">LOGIN</string>
    <string name="num_ro_de_telephone">Numéro de Telephone</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="admin">Admin</string>
    <string name="avez_vous_un_compte">Avez vous un compte ?</string>
    <string name="offrez_un_sourire_partagez_un_repas">Offrez un sourire, \npartagez un repas!</string>
    <string name="locate_me">Locate Me !</string>
    <string name="freebite2">FreeBite</string>
    <string name="title_activity_location2">LocationActivity2</string>
    <string name="google_maps_api_key">AIzaSyB5mYyVHYDhVXnrv3AaFQzSG2dwhuvVoWs</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ok_allons_y">OK, allons-y!</string>
    <string name="hello_user">Salut </string>
    <string name="avant_de_pouvoir_partager_votre_pi_ce_de_rechange_nous_avons_besoin_de_conna_tre_votre_emplacement">Avant de pouvoir partager votre repas, nous avons besoin de connaître votre emplacement.</string>
    <string name="afin_que_nous_puissions_afficher_les_annonces_proximit_et_savoir_combien_d_autres_personnes_attendent_de_partager_avec_vous">afin que nous puissions afficher les annonces à proximité et savoir combien d\'autres personnes attendent de partager avec vous</string>
    <string name="bonjour">Salut !\n</string>
    <string name="entrez_votre_mot_de_passe">Entrez votre mot de passe</string>
    <string name="profile_name">User Anonym db</string>
    <string name="profile_status">online</string>
    <string name="adding_profile_photo">Adding profile photo</string>
    <string name="account">Account</string>
    <string name="user_email">example@example.com</string>
    <string name="phone_number_desc">Tap to change email</string>
    <string name="username">\@M7MD43BAN</string>
    <string name="manage">Manage Mes Offres</string>
    <string name="bio">Your life is a book Don\'t be bad author</string>
    <string name="settings">Settings</string>
    <string name="notifications_and_sounds">Notifications and Sounds</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="stickers_and_emoji">Stickers and Emoji</string>
    <string name="chat_folders">Chat Folders</string>
    <string name="devices">Devices</string>
    <string name="language">Language</string>
    <string name="telegram_premium">Telegram Premium</string>
    <string name="help">Help</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="freebite_faq">FreeBite FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="footer_sentence">FreeBite copyright 2024</string>
    <string name="hello_blank_fragment">hello blank fragment\n</string>
    <string name="ajoutez_des_images_du_repas">Ajoutez des images du repas</string>
    <string name="refresh">Refresh</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="size">Size</string>
    <string name="prend_le_repas">Prend le repas!</string>
    <string name="descritption_de_l_offre">Descritption de l\'offre</string>
    <string name="proprietaire_de_l_offre">Proprietaire de l\'offre</string>
    <string name="tap_to_manage_your_offers">Cliquez pour manager tes offres</string>
    <string name="aucune_notification">Aucune notification</string>
    <string name="edit_mon_offre">edit mon offre</string>

</resources>