<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LogIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LogInActivity"
    android:background="@drawable/bg2"
    >
    <ImageView
        android:padding="@dimen/_20ssp"
        android:id="@+id/backL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        android:clickable="true"
        android:onClick="onImageClick"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="28dp"

        tools:ignore="MissingConstraints,UseCompoundDrawables"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_person_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/se_connecter"
            android:textColor="@color/white"
            android:textSize="32sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-25dp"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenue"
                android:textColor="@color/bienvenue"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/veuillez_entrez_vos_informations" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/e_mail"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:drawableEnd="@drawable/baseline_alternate_email_24"
                android:drawablePadding="@dimen/_120ssp"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/mot_de_passe"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:drawablePadding="@dimen/_120ssp"
                app:passwordToggleEnabled="true"
                android:inputType="textPassword"
                tools:ignore="LabelFor" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/rememberBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"
                    android:text="@string/souvient_de_moi" />

                <TextView
                    android:id="@+id/forgotPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/j_ai_oubli_mon_mot_de_passe"
                    tools:ignore="RelativeOverlap"
                    android:clickable="true"
                    />

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lgBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/btn"
                android:text="@string/se_connecter"
                android:textColor="@color/black"
                app:cornerRadius="32dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>